@@ -1,4 +1,7 @@
 import java.io.File;
+import java.io.PrintStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
 import java.util.Scanner;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -18,61 +21,117 @@ public class Main {
             System.out.print("$ ");
             String command = sc.nextLine();
 
-            List<String> parsedArgs = parseArguments(command);
-            if (parsedArgs.isEmpty()) {
+            List<Token> tokens = parseArguments(command);
+            if (tokens.isEmpty()) {
                 continue;
+            }
+
+            String redirectFile = null;
+            for (int i = 0; i < tokens.size(); i++) {
+                Token t = tokens.get(i);
+                if (!t.quoted && (t.text.equals(">") || t.text.equals("1>"))) {
+                    if (i + 1 < tokens.size()) {
+                        redirectFile = tokens.get(i + 1).text;
+                        tokens.remove(i + 1);
+                        tokens.remove(i);
+                        break;
+                    }
+                }
+            }
+
+            List<String> parsedArgs = new ArrayList<>();
+            for (Token t : tokens) {
+                parsedArgs.add(t.text);
             }
 
             String cmd = parsedArgs.get(0);
 
-            if (cmd.equals("exit")) {
-                break;
-            } else if (cmd.equals("echo")) {
-                StringBuilder sb = new StringBuilder();
-                for (int i = 1; i < parsedArgs.size(); i++) {
-                    sb.append(parsedArgs.get(i));
-                    if (i < parsedArgs.size() - 1) {
-                        sb.append(" ");
+            PrintStream originalOut = System.out;
+            FileOutputStream fos = null;
+            PrintStream fileOut = null;
+            try {
+                if (redirectFile != null) {
+                    File file = new File(redirectFile);
+                    if (!file.isAbsolute() && !redirectFile.startsWith("/")) {
+                        file = new File(currentDir, redirectFile);
                     }
-                }
-                System.out.println(sb.toString());
-            } else if (cmd.equals("type")) {
-                if (parsedArgs.size() > 1) {
-                    System.out.println(type(parsedArgs.get(1)));
-                } else {
-                    System.out.println("type: missing argument");
-                }
-            } else if (cmd.equals("pwd")) {
-                System.out.println(currentDir);
-            } else if (cmd.equals("cd")) {
-                String targetPath = parsedArgs.size() > 1 ? parsedArgs.get(1) : "~";
-                if (targetPath.isEmpty() || targetPath.equals("~")) {
-                    targetPath = System.getenv("HOME");
-                    if (targetPath == null) {
-                        targetPath = System.getProperty("user.home");
+                    File parent = file.getParentFile();
+                    if (parent != null && !parent.exists()) {
+                        parent.mkdirs();
                     }
+                    fos = new FileOutputStream(file);
+                    fileOut = new PrintStream(fos);
+                    System.setOut(fileOut);
                 }
-                File newDir = new File(targetPath);
-                if (!newDir.isAbsolute() && !targetPath.startsWith("/")) {
-                    newDir = new File(currentDir, targetPath);
-                }
-                try {
-                    if (newDir.exists() && newDir.isDirectory()) {
-                        currentDir = newDir.getCanonicalPath();
+
+                if (cmd.equals("exit")) {
+                    break;
+                } else if (cmd.equals("echo")) {
+                    StringBuilder sb = new StringBuilder();
+                    for (int i = 1; i < parsedArgs.size(); i++) {
+                        sb.append(parsedArgs.get(i));
+                        if (i < parsedArgs.size() - 1) {
+                            sb.append(" ");
+                        }
+                    }
+                    System.out.println(sb.toString());
+                } else if (cmd.equals("type")) {
+                    if (parsedArgs.size() > 1) {
+                        System.out.println(type(parsedArgs.get(1)));
                     } else {
+                        System.out.println("type: missing argument");
+                    }
+                } else if (cmd.equals("pwd")) {
+                    System.out.println(currentDir);
+                } else if (cmd.equals("cd")) {
+                    String targetPath = parsedArgs.size() > 1 ? parsedArgs.get(1) : "~";
+                    if (targetPath.isEmpty() || targetPath.equals("~")) {
+                        targetPath = System.getenv("HOME");
+                        if (targetPath == null) {
+                            targetPath = System.getProperty("user.home");
+                        }
+                    }
+                    File newDir = new File(targetPath);
+                    if (!newDir.isAbsolute() && !targetPath.startsWith("/")) {
+                        newDir = new File(currentDir, targetPath);
+                    }
+                    try {
+                        if (newDir.exists() && newDir.isDirectory()) {
+                            currentDir = newDir.getCanonicalPath();
+                        } else {
+                            System.out.println("cd: " + targetPath + ": No such file or directory");
+                        }
+                    } catch (Exception e) {
                         System.out.println("cd: " + targetPath + ": No such file or directory");
                     }
-                } catch (Exception e) {
-                    System.out.println("cd: " + targetPath + ": No such file or directory");
                 }
-            }
-            else if(getExecutable(cmd) != null){
-                String[] cmdArray = parsedArgs.toArray(new String[0]);
-                Process process = Runtime.getRuntime().exec(cmdArray, null, new File(currentDir));
-                process.getInputStream().transferTo(System.out);
-            }
-            else {
-                System.out.println(cmd + ": command not found");
+                else if(getExecutable(cmd) != null){
+                    ProcessBuilder pb = new ProcessBuilder(parsedArgs);
+                    pb.directory(new File(currentDir));
+                    if (redirectFile != null) {
+                        File file = new File(redirectFile);
+                        if (!file.isAbsolute() && !redirectFile.startsWith("/")) {
+                            file = new File(currentDir, redirectFile);
+                        }
+                        pb.redirectOutput(ProcessBuilder.Redirect.to(file));
+                    } else {
+                        pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+                    }
+                    pb.redirectError(ProcessBuilder.Redirect.INHERIT);
+                    Process process = pb.start();
+                    process.waitFor();
+                }
+                else {
+                    System.out.println(cmd + ": command not found");
+                }
+            } finally {
+                if (fileOut != null) {
+                    fileOut.close();
+                }
+                if (fos != null) {
+                    try { fos.close(); } catch (IOException e) {}
+                }
+                System.setOut(originalOut);
             }
         }
          sc.close();
@@ -111,12 +170,22 @@ public class Main {
 
     }
 
-    public static List<String> parseArguments(String input) {
-        List<String> args = new ArrayList<>();
+    public static class Token {
+        public String text;
+        public boolean quoted;
+        public Token(String text, boolean quoted) {
+            this.text = text;
+            this.quoted = quoted;
+        }
+    }
+
+    public static List<Token> parseArguments(String input) {
+        List<Token> args = new ArrayList<>();
         StringBuilder currentArg = new StringBuilder();
         boolean inSingleQuotes = false;
         boolean inDoubleQuotes = false;
         boolean hasContent = false;
+        boolean wasQuoted = false;
 
         for (int i = 0; i < input.length(); i++) {
             char c = input.charAt(i);
@@ -129,6 +198,7 @@ public class Main {
                     currentArg.append(c);
                     hasContent = true;
                 }
+                wasQuoted = true;
             } else if (inDoubleQuotes) {
                 if (c == '\\') {
                     if (i + 1 < input.length()) {
@@ -152,6 +222,7 @@ public class Main {
                     currentArg.append(c);
                     hasContent = true;
                 }
+                wasQuoted = true;
             } else {
                 if (c == '\\') {
                     if (i + 1 < input.length()) {
@@ -159,15 +230,19 @@ public class Main {
                         i++;
                         hasContent = true;
                     }
+                    wasQuoted = true;
                 } else if (c == '\'') {
                     inSingleQuotes = true;
+                    wasQuoted = true;
                 } else if (c == '"') {
                     inDoubleQuotes = true;
+                    wasQuoted = true;
                 } else if (Character.isWhitespace(c)) {
                     if (hasContent || currentArg.length() > 0) {
-                        args.add(currentArg.toString());
+                        args.add(new Token(currentArg.toString(), wasQuoted));
                         currentArg.setLength(0);
                         hasContent = false;
+                        wasQuoted = false;
                     }
                 } else {
                     currentArg.append(c);
@@ -177,7 +252,7 @@ public class Main {
         }
 
         if (hasContent || currentArg.length() > 0) {
-            args.add(currentArg.toString());
+            args.add(new Token(currentArg.toString(), wasQuoted));
         }
 
         return args;
